# K-NAR

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: audiobook.yml
.github/workflows/: audiobook.yml  tests.yml
docs/: ARCHITECTURE.md  ROADMAP.md  TEMPLATE.md  index.html
examples/: casa_de_madeira.md  cena_ponte_comando.json  demo_espacializacao.md  direct_and_render.py  historia_exemplo.txt  historia_sonora.txt  historia_template.md  multivoice_qa.py  narrated_scene.py  primeira_pessoa_demo.md  proof_dsp.py  proof_prosody.py  render_neural.py  render_scene.py  roteiro_exemplo.json  roteiro_narrado.json  run_mvp.py  story_to_audio.py  template_primeira_pessoa.md  template_terceira_pessoa.md  vargem_seca_cap1.md
k_nar/: __init__.py  __main__.py  align.py  casting.py  cli.py  emotion.py  lang.py  material.py  mixpolicy.py  models.py  orchestrator.py  pipeline.py  prosody.py  proximity.py  qa.py  schema.py  story.py  text.py  timeline.py
k_nar/director/: __init__.py  base.py  llama.py  rules.py
k_nar/narrative/: __init__.py  acting.py  lexicons.py  person.py  screenwriter.py
k_nar/render/: __init__.py  dsp.py  impulse.py  renderer.py  trim.py  voice.py
models/: README.md
scripts/: ab_spatial.py  download_lang.sh  download_model.sh  download_piper.sh  download_sfx.py  from_issue.py  package_audio.py  setup.sh
tests/: test_align.py  test_cache_batch.py  test_casting.py  test_director.py  test_emotion.py  test_forced_alignment_orchestrator.py  test_material.py  test_mixpolicy.py  test_multilang.py  test_multivoice.py  test_narration.py  test_person.py  test_prosody.py  test_qa.py  test_render.py  test_schema.py  test_screenwriter.py  test_sfx.py  test_sound_events.py  test_soundlib.py  test_space.py  test_spatial.py  test_story.py  test_timeline.py  test_xtts_split.py
(+16 files in other folders)
