[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k-nar"
version = "0.1.0"
description = "Motor de Performance Dramatica para audio drama autonomo (orquestrador de duas passagens, orientado a linha de tempo)."
readme = "README.md"
requires-python = ">=3.10"
# O CORE nao tem dependencias: a logica de ritmo roda so com stdlib.
dependencies = []

[project.optional-dependencies]
# Backends reais de TTS e o motor de DSP entram como EXTRAS, isolados do core.
tts = ["piper-tts>=1.4", "numpy>=1.24"]    # TTS neural real (Piper, CPU)
dsp = ["numpy>=1.24", "pedalboard>=0.9"]   # camada de render: sintese, mix, reverb
llm = ["llama-cpp-python>=0.2"]            # Director com LLM local (GGUF em CPU)
dev = ["pytest", "numpy>=1.24", "pedalboard>=0.9"]

[tool.setuptools.packages.find]
include = ["k_nar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
